2007-05-15  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpheal.c (gimp_heal_motion): convert the source
	region to the dest region's type, not the other way around
	(using the wrong if() condition when doing so). Fixes bug #390938.

2007-05-15  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c (marshall_proc_db_call): Allow
	any number type in a vector to be passed in PDB call as an INT*ARRAY.
	Updated error messages accordingly. Fixes bug #435640.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c (browser_dialog_open): don't show
	the window yet. The user might not have the help pages installed.

	* plug-ins/helpbrowser/wilber-reading.png: use the new style Wilber.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/wmf.c
	* plug-ins/fits/fits.c
	* plug-ins/sel2path/sel2path.c
	* plug-ins/xjt/xjt.c: added missing calls to
	gimp_window_set_transient().

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/svg.c
	* plug-ins/common/tiff-load.c
	* plug-ins/common/postscript.c
	* plug-ins/common/poppler.c: added missing calls to
	gimp_window_set_transient().

	* libgimp/gimppixbuf.c (gimp_layer_new_from_pixbuf): reduced
	number of progress updates.

2007-05-14  Michael Natterer  <mitch@gimp.org>

	* app/file/file-utils.c (file_utils_filename_to_uri): fix check on
	the GError returned by file_utils_filename_is_uri().

2007-05-14  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpenv.c: #include <CoreServices/CoreServices.h>,
	not "...".

2007-05-14  Michael Natterer  <mitch@gimp.org>

	* configure.in: added check for OSX' Carbon framework.

	* libgimpbase/Makefile.am (libgimpbase_2_0_la_LDFLAGS): add
	$(CARBON_LDFLAGS)

	* libgimpbase/gimpenv.c (gimp_user_directory): add Carbon version.

	(find_folder): new Crabon-only utility function.

2007-05-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-transform.c: fixed gtk-doc comment.
