@@ -99,7 +99,8 @@
                           BACKGROUND-FILL)
       (gimp-selection-none img)
       (set! text-layer (car (gimp-text-fontname img -1 0 0
-                              (string-append _"Sheet " (number->string num)
+                              (string-append _"Contact Sheet "
+                                             (number->string num)
                                              _" for directory " dir)
                                              0 TRUE 14 PIXELS title-font)))
       (set! text-width (car (gimp-drawable-width text-layer)))
@@ -114,7 +115,7 @@
 
   ;This routine should preserve the aspect ratio of the original image
   (define (make-thumbnail-size img thumb-w thumb-h)
-    (gimp-image-scale new-img thumb-w thumb-h)
+    (gimp-image-scale img thumb-w thumb-h)
   )
 
   (let* (
@@ -123,9 +124,8 @@
         (img-count 0)
         (pos-x 0)
         (pos-y 0)
+
         (sheet-data)
-        (sheet-img)
-        (sheet-layer)
         (sheet-width)
         (sheet-height)
         (thumb-w)
@@ -136,6 +136,10 @@
         (off-y)
         (max-x)
         (max-y)
+
+        (sheet-img)
+        (sheet-layer)
+
         (new-img)
         (file)
         (file-path)
@@ -180,7 +184,7 @@
           (if (and (not (re-match "index.*" file))
                    (= (file-type file-path) FILE-TYPE-FILE)
               )
-            (catch 'errobj
+            (catch ()
               (set! new-img
                     (car (gimp-file-load RUN-NONINTERACTIVE file-path file)))
 
@@ -289,4 +293,4 @@
     SF-COLOR   _"Background color" "black"
 )
 
-(script-fu-menu-register "script-fu-contactsheet" "<Toolbox>/Xtns/Utils")
+(script-fu-menu-register "script-fu-contactsheet" "<Toolbox>/Xtns/_Utilities")
